--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,7 +1,10 @@
 $btnPrimaryBackground: green;
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
-
+/*You could change the font
+$baseFontFamily: Oxygen;
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
+*/
 @import 'bootstrap';
 
 body {
