--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,8 @@
 <h1>About Us</h1>
+<br>
+<p>
+	We like raindrops on roses. Please post a few of your favorite things!
+</p>
 <p>
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a project to teach
 	<%= link_to "Ruby on Rails", 	
