Add crop image, change title

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,8 @@
 <div class="footer">
 		<small>
+			Created by
+			<%= link_to "Lori Ortiz", "http://artanddesign.us" %> in
+			
 			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
 			by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
 			</small>
