--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.full_error :image_content_type, class: "alert alert-error" %>
 
 
-  <%= f.input :image, label: "Upload an image" %>
+  <%= f.input :image, label: "<strong>Upload an image</strong><br>(jpg, jpeg, or png<br>less than 2MB)" %>
   <%= f.input :description, as: :text, input_html: { rows: "3"} %>
 
   <div class="form-actions">
