--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -17,7 +17,7 @@ body {
 	background-color: #f8f8f8;
  	h1 {color: #c3334e;}
 }
-h1 {color: #c3334e;}
+h1, h2 {color: #c3334e;}
 .navbar-inner {
 	@include box-shadow(none !important);
 	border: 0;
