style description and show view

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -5,7 +5,7 @@
 			<%= link_to "Art & Design &", "http://artanddesign.us" %>
 		</p>
 		<p>  
-			<%= link_to "Post!", new_user_registration_path, class: "btn btn-primary btn-large" %> 
+			<%= link_to "Add 1", new_user_registration_path, class: "btn btn-primary btn-large" %> 
 		</p>
 </div>
 <% end %>
