--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -2,11 +2,13 @@
 	<div class="span6 offset3">
 			<div class="well">
 				<%= image_tag @pin.image %>
-				<p>
+				<p class="description">
 				  <%= @pin.description %>
 				</p>
 				<p>
-				  <%= @pin.user.name %>
+					<strong>
+				  	<%= @pin.user.name %>
+				  </strong>
 				</p>
 				<% if current_user == @pin.user %>
 					<%= link_to 'Edit', edit_pin_path(@pin) %> |
