Uninstall Bootstrap-will_paginate

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -53,9 +53,7 @@ h1, h2 {color: #c3334e;}
 	white-space: pre-line;
 }
 .pagination {
+	padding-top: 20px;
 	text-align: center;
-	.disabled {
-		visibility: hidden;
-	}
 }
 	
