--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,18 +11,18 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <%= link_to "Art & Design &", "http://artanddesign.us", class: "brand" %>
+      <%= link_to "art and design", "http://artanddesign.us", class: "brand" %>
       
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
         	<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "About Us", about_path %></li>
+					<li><%= link_to "About", about_path %></li>
 				</ul>
 				<ul class="nav pull-right">
           <% if user_signed_in? %>
-            <li><%= link_to "Add 1", new_pin_path, class: "brand" %></li>
+            <li><%= link_to "Pin", new_pin_path, class: "btn" %></li>
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
             <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
           <% else %>
