--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,11 +1,10 @@
 <% unless user_signed_in? %>
 <div class="hero-unit">
-	<h1>Raindrops on Roses</h1>
-		<p>Crowdsourcing Inspiration from
-			<%= link_to "Art & Design &", "http://artanddesign.us" %>
+	<h1>artstream</h1>
+		<p>Dynamic collective concioussness.
 		</p>
 		<p>  
-			<%= link_to "Add 1", new_user_registration_path, class: "btn btn-primary btn-large" %> 
+			<%= link_to "Enter", new_user_registration_path, class: "btn btn-primary btn-large" %> 
 		</p>
 </div>
 <% end %>
