--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
-<h1>About Us</h1>
+<h1>about</h1>
 <br>
 <p>
-	We like raindrops on roses. Please post a few of your favorite things!
+	Invitational and crowdsourced endless page of art. Add one!
 </p>
 <p>
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a project to teach
