--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
-<h1>about</h1>
+<h1>about artstream</h1>
 <br>
 <p>
-	Invitational and crowdsourced endless page of art. Add one!
+	An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours!
 </p>
 <p>
 	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a project to teach
