--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,25 @@
-<h1>about artstream</h1>
+<h1>about artStream</h1>
 <br>
-<p>
-	An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours!
-</p>
-<p>
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %> is a project to teach
-	<%= link_to "Ruby on Rails", 	
-			"http://rubyonrails.org" %> in one month.
-</p>
+<div class="row">
+	<div class="span6">
+		<p>
+			An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours!
+		</p>
+		<p>
+			Enter images of art regularly to show on the first "page" at the head of the stream. All muses are welcome.
+		</p> 
+		<p>
+			<em>ArtStream</em> is moderated and semi-exclusive. That is, the Administrator will remove pins at our discretion.  We don't publish, share or sell User's email addresses, although, we may send an email to a User related to <em>ArtStream</em>. Users may edit or delete their pinned images or descriptions at any time. <em>ArtStream</em> disclaims responsibility for rights or permissions, and Users pin with that understanding, accepting all responsibility. Images belong to the artists and should not be found elsewhere on the web without their permission and credit.
+		</p>
+		<p>
+			Thank you for participating in this pilot project. Please use it to your advantage while creating a "quilt" of inspiration for others, as long as time. We plan to add User pages, links to social media, and more.
+		</p>
+		<p>
+			Lori Ortiz<br>
+			Founder, Admin<br> 
+			3.1.13
+		</p>
+	</div>
+</div>
+
 
