--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,6 @@
 <% unless user_signed_in? %>
 <div class="hero-unit">
-	<h1>artstream</h1>
+	<h1>artStream</h1>
 		<br> 
 			<%= link_to "Enter", new_user_registration_path, class: "btn btn-primary btn-large" %> 
 		
