--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -42,7 +42,7 @@ h1, h2, {color: #c3334e;}
 	-moz-border-radius: 5px;
 	border-radius:  5px;
 	box-shadow: 1px 1px 10px #444;
-	width: auto;
+	width: 250;
 	}
 .box img {
 	display: block;
