--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,16 +3,16 @@
 <div class="row">
 	<div class="span6">
 		<p>
-			An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours!
-		</p>
-		<p>
-			Enter images of art regularly to show on the first "page" at the head of the stream. All muses are welcome.
+			An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours! All muses are welcome. Users may edit or delete their pinned images or descriptions at any time.
 		</p> 
 		<p>
-			<em>ArtStream</em> is moderated and semi-exclusive. That is, the Administrator will remove pins at our discretion.  We don't publish, share or sell User's email addresses, although, we may send an email to a User related to <em>ArtStream</em>. Users may edit or delete their pinned images or descriptions at any time. <em>ArtStream</em> disclaims responsibility for rights or permissions, and Users pin with that understanding, accepting all responsibility. Images belong to the artists and should not be found elsewhere on the web without their permission and credit.
+			<em>ArtStream</em> is moderated. We may remove Pins at our discretion.  Users accept all responsibility, rights, and permissions for their content. <em>ArtStream</em> content should not be found elsewhere on the web without permission and credit. We don't publish, share or sell Users' information, although, we may send an email to a User related to <em>ArtStream</em>.  
 		</p>
 		<p>
-			Thank you for participating in this pilot project. Please use it to your advantage while creating a "quilt" of inspiration for others, as long as time. We plan to add User pages, links to social media, and more.
+			Many thanks to Skillshare teacher Mattan Griffel. Thanks to first responders Cara, Norma Markley, joombah pete, and Jeffrey Cyphers Wright. 
+		</p>
+		<p>
+			Thank you for participating in this pilot project. Use it to your advantage while creating a "quilt" of inspiration for others, as long as <em>ArtStream</em>. Pinning is free through 2013. More features coming.
 		</p>
 		<p>
 			Lori Ortiz<br>
