--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
         <ul class="nav">
-        	<li><%= link_to "Home", root_path %></li>
+        	<li><%= link_to "ArtStream", root_path %></li>
 					<li><%= link_to "About", about_path %></li>
 				</ul>
 				<ul class="nav pull-right">
