add htaccess and revise about

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,23 +3,30 @@
 <div class="row">
 	<div class="span6">
 		<p>
-			An invitational and crowdsourced endless page of art. Dynamic collecive concioussness. Add yours! All muses are welcome. Users may edit or delete their pinned images or descriptions at any time.
-		</p> 
-		<p>
-			<em>ArtStream</em> is moderated. We may remove Pins at our discretion.  Users accept all responsibility, rights, and permissions for their content. <em>ArtStream</em> content should not be found elsewhere on the web without permission and credit. We don't publish, share or sell Users' information, although, we may send an email to a User related to <em>ArtStream</em>.  
+			<em>ArtStream</em> is an invitational and crowdsourced art exhibit&mdash;a show of dynamic collecive concioussness. Add yours! All muses are welcome. Use the application to show and share art while creating a "quilt" of inspiration for others, as long as <em>ArtStream</em>. 
 		</p>
 		<p>
-			Many thanks to Skillshare teacher Mattan Griffel. Thanks to first responders Cara, Norma Markley, joombah pete, and Jeffrey Cyphers Wright. 
+			Thank you for participating. Many thanks to Mattan Griffel, the source of this project. 
 		</p>
-		<p>
-			Thank you for participating in this pilot project. Use it to your advantage while creating a "quilt" of inspiration for others, as long as <em>ArtStream</em>. Pinning is free through 2013. More features coming.
-		</p>
+		
 		<p>
 			Lori Ortiz<br>
 			Founder, Admin<br> 
 			3.1.13
 		</p>
 	</div>
+	<div class="span6">
+		<p>Logged in Users may view full-size images. They can edit or delete those they have pinned. 
+		Pinning is free through 2013. For now, logged in features are only available on desktop or tablet. The public artStream is always handy for viewing on small devices.</p>
+		<ol>
+			<li>Go back to the "ArtStream" home page. Press "Enter." Type your email and create a password of six or more characters. Press the "Sign up" button.</li>
+			<li>Click on "Pin" in the top, pink bar. Press the "Choose File" button to bring up your computer's finder. Search for the image you want to add. It need not be larger than 500 pixels wide at 72 resolution. For fastest loading, reduce larger images in your image editor or use the "Save for Web" Photoshop feature. </li>
+			<li>Type your description using the keyboard return to break lines of text. Press "Create Pin." </li>
+			<li>Contact me, lori (at) loriortiz.com, for help or feedback.</li>
+		</ol>
+		<small>
+				<em>ArtStream</em> is moderated. We may remove Pins at our discretion.  Users accept all responsibility, rights, and permissions for their content. <em>ArtStream</em> content should not be found elsewhere on the web without permission and credit. We don't publish, share or sell Users' information, although, we may send an email to a User related to <em>ArtStream</em>.  
+		</small>
+	</div>
 </div>
-
 
