correct typo in about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="span6">
 		<p>
-			<em>ArtStream</em> is an invitational and crowdsourced art exhibit&mdash;a show of dynamic collecive concioussness. Add yours! All muses are welcome. Use the application to show and share art while creating a "quilt" of inspiration for others, as long as <em>ArtStream</em>. 
+			<em>ArtStream</em> is an invitational and crowdsourced art exhibit&mdash;a show of dynamic collective concioussness. Add yours! All muses are welcome. Use the application to show and share art while creating a "quilt" of inspiration for others, as long as <em>ArtStream</em>. 
 		</p>
 		<p>
 			Thank you for participating. Many thanks to Mattan Griffel, the source of this project. 
@@ -16,10 +16,10 @@
 		</p>
 	</div>
 	<div class="span6">
-		<p>Logged in Users may view full-size images. They can edit or delete those they have pinned. 
+		<p>Logged in Users may view full-size images as well as edit or delete their own Pins. 
 		Pinning is free through 2013. For now, logged in features are only available on desktop or tablet. The public artStream is always handy for viewing on small devices.</p>
 		<ol>
-			<li>Go back to the "ArtStream" home page. Press "Enter." Type your email and create a password of six or more characters. Press the "Sign up" button.</li>
+			<li>Go back or click on "ArtStream" on the pink bar at the top of this page.</li><li> Press "Enter." Type your email and create a password of six or more characters. Press the "Sign up" button.</li>
 			<li>Click on "Pin" in the top, pink bar. Press the "Choose File" button to bring up your computer's finder. Search for the image you want to add. It need not be larger than 500 pixels wide at 72 resolution. For fastest loading, reduce larger images in your image editor or use the "Save for Web" Photoshop feature. </li>
 			<li>Type your description using the keyboard return to break lines of text. Press "Create Pin." </li>
 			<li>Contact me, lori (at) loriortiz.com, for help or feedback.</li>
